--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -1,7 +1,7 @@
 // src/sass/theme/_child_theme_variables.scss
-@forward "theme/mixins/fluid-type";
-@forward "theme/mixins/breakpoints";
-@forward "theme/mixins/container";
+@import "theme/mixins/fluid-type";
+@import "theme/mixins/breakpoints";
+@import "theme/mixins/container";
 
 // — Bootstrap overrides —
 /// Brand colors
